TRANSLATE-1191 Interface of the term search - hovering autocomplete-item does NOT change the #search-value, only keyboard-events do - selecting an item by mouse-click starts seach correctly - display lang-selector as last itme in search-area - sort lang-array alphabetically (GUI-Language-Switcher, too) - scrollbars only if necessary

--- a/application/modules/editor/termportal/css/termportal.css
+++ b/application/modules/editor/termportal/css/termportal.css
@@ -6,6 +6,8 @@
     margin-bottom: 2em;
 }
 
+/* --------------- header --------------- */
+
 #container-header {
     display: flex;
     flex-flow: row wrap;
@@ -35,7 +37,7 @@
     margin-top: 19px;
 }
 
-@media (max-width: 610px) {
+@media (max-width: 600px) {
     #logo {
         flex: 0 1 100%;
         text-align:left;
@@ -45,6 +47,45 @@
     #languageSelector { order: 1; text-align: left;}
     #logout { order: 2; }
 }
+
+/* --------------- search --------------- */
+
+#searchForm {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: stretch;
+    align-content: stretch;
+    justify-content: flex-end;
+    padding: 12px 10px 10px 10px;
+    margin: 5px 0px;
+}
+
+#search {
+    flex: 1 1 auto;
+    order: 1;
+    padding: 0px 5px;
+    margin-right: 0px;
+}
+#searchButton {
+    flex: 0 0 20px;
+    order: 2;
+    margin-right: 0px;
+}
+#languages-button {
+    flex: 0 0 80px;
+    order: 3;
+    margin-right: 0px;
+}
+
+@media (max-width: 600px) {
+    #search {
+        flex: 20 0 90%;
+        height: 30px;
+        margin-bottom: 5px;
+    }
+}
+
+/* --------------- results --------------- */
 
 #error-no-results {
     padding: 7px;
@@ -61,32 +102,6 @@
     margin-right: 5px;
 }
 
-#searchForm {
-    display: flex;
-    flex-flow: row wrap;
-    align-items: stretch;
-    padding: 12px 10px 10px 10px;
-    margin: 5px 0px;
-}
-
-#search {
-    flex: 1 1 auto;
-    order: 1;
-    margin-right: 5px;
-    padding: 0px 5px;
-}
-#searchButton {
-    flex: 0 0 20px;
-    order: 2;
-}
-
-#search,
-#searchButton {
-    height: 2em;
-    position: relative;
-    margin-top:  -3px;
-}
-
 #finalResultContent {
     display: flex;
     flex-flow: row wrap;
@@ -97,8 +112,8 @@
     order: 1;
     margin-right: 5px;
     max-height: 600px;
-    overflow-y: scroll;
-    overflow-x:  scroll;
+    overflow-x: auto;
+    overflow-y: auto;
     padding-right: 30px;
 }
 
@@ -108,7 +123,7 @@
 #searchTermsSelect { list-style-type: none; margin: 0px; padding: 0px; }
 #searchTermsSelect li { margin: 3px; padding: 0.4em; }
 
-@media (max-width: 700px) {
+@media (max-width: 600px) {
     #searchTermsHolder {
         flex-grow: 1;
         flex-basis: 90%;
@@ -125,16 +140,18 @@
     flex-grow:  1;
 }
 
-@media (min-width: 700px) {
+@media (min-width: 600px) {
     #resultTermsHolder {
         max-height: 520px;
-        overflow-y: scroll;
+        overflow-x: auto;
+        overflow-y: auto;
         padding-right: 30px;
     }
 }
 
 #resultTermsHolder div {
-    overflow-y: scroll;
+    overflow-x: auto;
+    overflow-y: auto;
 }
 
 #termTable,
